# terrain_characterizer

./: CMakeLists.txt  package.xml
cfg/: algorithmParameters.cfg
launch/: rs_camera.launch
src/: depthMapNode.py  depth_viewer.py  generateFeatureLogs.py  generatePointCloudFitterFeatures.py  optoforceFeatureExtractor.cpp  pointCloudNode.cpp  pointCloudPlaneFitter.cpp  realsenseNode.cpp
srv/: featureLoggingService.srv
